--- a/data/news_providers/configs.json
+++ b/data/news_providers/configs.json
@@ -2,7 +2,7 @@
     "news_api": {
         "language": "en",
         "country": "us",
-        "top_headlines": "https://newsapi.org/v2/top-headlines?country=us&apiKey=f73d1e73d0244077a5ad09b1d1b068cf",
+        "top_headlines": "https://newsapi.org/v2/top-headlines?country=us&apiKey=",
         "base_url": "https://newsapi.org/v2/"
     }
 }
