--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ pydantic==2.8.2
 typer==0.12.3
 httpx
 devtools==0.12.2
-
+langchain
+langchainhub
+langchain-openai
+langchain-community
+tavily-python
