--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-OPENAI_API_KEY=your_openai_api_key_here
-TAVILY_API_KEY=your_tavily_api_key_here
-NEWSAPI_API_KEY=your_newsapi.org_api_key_here
+POLYGON_WALLET_PRIVATE_KEY=""
+OPENAI_API_KEY=""
+TAVILY_API_KEY=""
+NEWSAPI_API_KEY=""
