--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,10 @@ newsapi-python==0.2.7
 
 # local rag
 jq
+langchain-chroma
+
+# Dockerization fail points:
+# dependencies of py-clob-client
+eip712-structs
+web3
 
