clean up naming, add early trading agent logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,9 @@ langchain-community
 langgraph
 tavily-python
 newsapi-python==0.2.7
-
-# local rag
 jq
 langchain-chroma
-
-# dependencies of py-clob-client
 eip712-structs
 web3
+scheduler==0.8.7
 
