--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-fastapi==0.111.0
-py-clob-client==0.17.1
-py-order-utils
+data_sources==0.0.1
+fastapi==0.111.1
+httpx==0.27.0
+langchain_chroma==0.1.2
+langchain_community==0.2.10
+langchain_core==0.2.26
+langchain_openai==0.1.19
+newsapi==0.1.1
+newsapi_python==0.2.7
+py_clob_client==0.17.1
+py_order_utils==0.3.0
 pydantic==2.8.2
+python-dotenv==1.0.1
+tavily_python==0.3.4
+tg.devtools==2.4.3
 typer==0.12.3
-httpx
-devtools==0.12.2
-langchain
-langchainhub
-langchain-openai
-langchain-community
-langgraph
-tavily-python
-newsapi-python==0.2.7
-jq
-langchain-chroma
-eip712-structs
-web3
-scheduler==0.8.7
-
+web3==5.31.4
