--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.9"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -31,6 +31,6 @@ jobs:
     - name: Lint with black
       run: |
         black .
-    - name: Test with pytest
+    - name: Test with unittest
       run: |
-        pytest
+        python -m unittest discover
